crates/tokmd-format/tests/analysis_html/snapshots/analysis_html__snapshots__empty_receipt_json.snap
---
source: crates/tokmd-format/tests/analysis_html/snapshots.rs
expression: json_section
---
{"files":[]}
