crates/tokmd-format/tests/analysis_html/snapshots/analysis_html__snapshots__empty_receipt_metrics.snap
---
source: crates/tokmd-format/tests/analysis_html/snapshots.rs
expression: section
---
metrics-grid {
            display: grid;
            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
            gap: 20px;
            margin-bottom: 30px;
        }
        .metric-card {
            background: var(--bg-card);
            border-radius: 12px;
            padding: 20px;
            text-align: center;
            border: 1px solid var(--border);
            transition: transform 0.2s, box-shadow 0.2s;
        }
        .metric-card:hover {
            transform: translateY(-2px);
            box-shadow: 0 4px 20px rgba(76, 154, 255, 0.2);
        }
        .metric-card .value {
            font-size: 2rem;
            font-weight: bold;
            color: var(--accent);
            display: block;
        }
        .metric-card .label {
            color: var(--text-secondary);
            font-size: 0.85rem;
            text-transform: uppercase;
            letter-spacing: 1px;
        }
        .section {
            background: var(--bg-secondary);
            border-radius: 12px;
            padding: 24px;
            margin-bottom: 24px;
            border: 1px solid var(--border);
        }
        .section h2 {
            font-size: 1.3rem;
            margin-bottom: 20px;
            padding-bottom: 10px;
            border-bottom: 2px solid var(--accent);
            display: inline-block;
        }
        #treemap {
            width: 100%;
            height: 400px;
            background: var(--bg-primary);
            border-radius: 8px;
            overflow: hidden;
        }
        .treemap-cell {
            position: absolute;
            overflow: hidden;
            border: 1px solid var(--bg-primary);
            transition: opacity 0.2s;
            cursor: pointer;
        }
        .treemap-cell:hover { opacity: 0.85; }
        .treemap-label {
            padding: 4px 6px;
            font-size: 11px;
            color: white;
            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
        .search-box {
            width: 100%;
            padding: 12px 16px;
            font-size: 1rem;
            background: var(--bg-primary);
            border: 1px solid var(--border);
            border-radius: 8px;
            color: var(--text-primary);
            margin-bottom: 16px;
        }
        .search-box:focus {
            outline: none;
            border-color: var(--accent);
            box-shadow: 0 0 0 3px rgba(76, 154, 255, 0.2);
        }
        table {
            width: 100%;
            border-collapse: collapse;
            font-size: 0.9rem;
        }
        th, td {
            padding: 12px;
            text-align: left;
            border-bottom: 1px solid var(--border);
        }
        th {
            background: var(--bg-card);
            color: var(--accent);
            font-weight: 600;
            text-transform: uppercase;
            font-size: 0.8rem;
            letter-spacing: 0.5px;
            cursor: pointer;
        }
        th:hover { background: var(--accent); color: white; }
        tr:hover { background: rgba(76, 154, 255, 0.1); }
        .num { text-align: right; font-family: 'SF Mono', Monaco, monospace; }
        .path { font-family: 'SF Mono', Monaco, monospace; font-size: 0.85rem; }
        .lang-badge {
            display: inline-block;
            padding: 2px 8px;
            border-radius: 4px;
            font-size: 0.75rem;
            font-weight: 600;
        }
        .hidden { display: none; }
        footer {
            text-align: center;
            padding: 30px;
            color: var(--text-secondary);
            font-size: 0.85rem;
        }
        footer a { color: var(--accent); text-decoration: none; }
        footer a:hover { text-decoration: underline; }
    </style>
</head>
<body>
    <header>
        <h1>tokmd Analysis Report</h1>
        <div class="timestamp">Generated: [TIMESTAMP]</div>
