crates/tokmd-format/tests/analysis_html/snapshots/analysis_html__snapshots__single_file_json_data.snap
---
source: crates/tokmd-format/tests/analysis_html/snapshots.rs
expression: pretty
---
{
  "files": [
    {
      "code": 250,
      "lang": "Rust",
      "lines": 325,
      "module": "src",
      "path": "src/main.rs",
      "tokens": 750
    }
  ]
}
